GNOME Bugzilla – Bug 765926
mpegtsmux: Set PTS on aligned buffers
Last modified: 2016-06-07 12:14:21 UTC
Created attachment 327201 [details] [review] [PATCH] mpegtsmux: Set PTS on aligned buffers This was broken in 09c05df (make "alignment" property more useful for packetisation).
Regression from 1.4 to 1.6
Wonder if it should prefer dts if available? We should also add a unit test for it.
(In reply to Tim-Philipp Müller from comment #2) > Wonder if it should prefer dts if available? What do you mean? To use DTS in place of PTS if no PTS is available? Or to also add the same code for DTS passthrough? The latter would make sense to me, but otherwise the patch looks good to me. Jan, can you provide a test for this?
Sorry, I have no experience creating tests for elements.
What's your opinion on the DTS?
I'm pretty sure the muxer doesn't ever set the DTS of the buffers in the adapter, anyway. See new_packet_m2ts.
But it probably should, however that can be handled in a separate bug then :) Tim, ok to go with this patch here?
There's also a patch for the same issue in bug #762715 fwiw.
Comment on attachment 327201 [details] [review] [PATCH] mpegtsmux: Set PTS on aligned buffers This one is more complete than the one in the other bug, and slightly simpler. I would go for this one, and we should open another bug for DTS passthrough (which the other patch does a little bit but not really, it needs more changes AFAIU)
Other opinions? I'll merge it otherwise for 1.8.2
Go for it.
commit 851c89ded9c417c462868d287fdf3aefb128f8ac Author: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com> Date: Mon May 2 17:38:50 2016 +0200 mpegtsmux: Set PTS on aligned buffers This was broken in 09c05df (make "alignment" property more useful for packetisation). https://bugzilla.gnome.org/show_bug.cgi?id=765926
*** Bug 762715 has been marked as a duplicate of this bug. ***